Add word-length selector to autoplay and improve documentation
- Add word-length selection (4/5/6/7 letters) to autoplay modal
- Filter dictionaries by selected word length in autoplay
- Update copilot instructions with concise architecture guide
- Improve DictionaryAnalyser documentation with comprehensive Javadocs
- Enhance getEntropy method with better variable names and edge case handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,19 +29,19 @@ dictionaries.default.fallbackPath=dictionaries/5_letter_words.txt
 dictionaries.default.wordLength=5
 dictionaries.default.description=Standard 5-letter word dictionary
 
-dictionaries.easy.name=Easy Mode (4 Letters)
+dictionaries.easy.name=Easy (4 Letters)
 dictionaries.easy.path=${dictionary.base.path}/4_Letter_Words.txt
 dictionaries.easy.fallbackPath=dictionaries/4_letter_words.txt
 dictionaries.easy.wordLength=4
 dictionaries.easy.description=Easier 4-letter words
 
-dictionaries.hard.name=Hard Mode (6 Letters)
+dictionaries.hard.name=Hard (6 Letters)
 dictionaries.hard.path=${dictionary.base.path}/6_Letter_Words.txt
 dictionaries.hard.fallbackPath=dictionaries/6_letter_words.txt
 dictionaries.hard.wordLength=6
 dictionaries.hard.description=Challenging 6-letter words
 
-dictionaries.expert.name=Expert Mode (7 Letters)
+dictionaries.expert.name=Expert (7 Letters)
 dictionaries.expert.path=${dictionary.base.path}/7_Letter_Words.txt
 dictionaries.expert.fallbackPath=dictionaries/7_letter_words.txt
 dictionaries.expert.wordLength=7
