--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,26 +24,26 @@ dictionary.fallback.paths=dictionaries/5_letter_words.txt,src/main/resources/dic
 #         dictionaries.<id>.description=<Description>
 
 dictionaries.default.name=Standard (5 Letters)
-dictionaries.default.path=${dictionary.base.path}/${dictionary.file.name}
-dictionaries.default.fallbackPath=dictionaries/5_letter_words.txt
+dictionaries.default.path=dictionaries/5_letter_words.txt
+dictionaries.default.fallbackPath=${dictionary.base.path}/5_Letter_Words_Official.txt
 dictionaries.default.wordLength=5
 dictionaries.default.description=Standard 5-letter word dictionary
 
 dictionaries.easy.name=Easy (4 Letters)
-dictionaries.easy.path=${dictionary.base.path}/4_Letter_Words.txt
-dictionaries.easy.fallbackPath=dictionaries/4_letter_words.txt
+dictionaries.easy.path=dictionaries/4_letter_words.txt
+dictionaries.easy.fallbackPath=${dictionary.base.path}/4_Letter_Words.txt
 dictionaries.easy.wordLength=4
 dictionaries.easy.description=Easier 4-letter words
 
 dictionaries.hard.name=Hard (6 Letters)
-dictionaries.hard.path=${dictionary.base.path}/6_Letter_Words.txt
-dictionaries.hard.fallbackPath=dictionaries/6_letter_words.txt
+dictionaries.hard.path=dictionaries/6_letter_words.txt
+dictionaries.hard.fallbackPath=${dictionary.base.path}/6_Letter_Words.txt
 dictionaries.hard.wordLength=6
 dictionaries.hard.description=Challenging 6-letter words
 
 dictionaries.expert.name=Expert (7 Letters)
-dictionaries.expert.path=${dictionary.base.path}/7_Letter_Words.txt
-dictionaries.expert.fallbackPath=dictionaries/7_letter_words.txt
+dictionaries.expert.path=dictionaries/7_letter_words.txt
+dictionaries.expert.fallbackPath=${dictionary.base.path}/7_Letter_Words.txt
 dictionaries.expert.wordLength=7
 dictionaries.expert.description=Expert 7-letter words
 
