Dictionary screen: 5-bucket complexity + heatmap; expand API/docs and UI updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,6 +54,11 @@ output.file.prefix.summary=summary-
 output.file.prefix.columns=columns-
 output.file.extension=.csv
 
+# Analysis configuration
+analysis.output.enabled=false
+analysis.output.path=${output.base.path}/Results
+analysis.max.games.default=100
+
 # Game configuration
 game.word.length=5
 game.max.attempts=6
