Add authentication system with optional login
- Added Spring Security with form-based and OAuth2 (Google/Apple) authentication
- Created User entity with JPA/H2 database persistence
- Implemented UserRepository, UserService, CustomUserDetailsService, CustomOAuth2UserService
- Added SecurityConfig with optional authentication (guests can play without login)
- Created login/registration UI with OAuth buttons and cancel option
- Added Sign In link to navigation menu with green styling
- Updated game.js to support both authenticated and guest users
- Added comprehensive OAuth setup documentation
- Login is optional - users can play anonymously or sign in to track games

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,43 @@ springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Database Configuration (H2 for development)
+spring.datasource.url=jdbc:h2:file:./data/wordai;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+# OAuth2 Configuration - Google
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
+spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# OAuth2 Configuration - Apple
+# Get credentials from: https://developer.apple.com/account/resources/identifiers/list/serviceId
+spring.security.oauth2.client.registration.apple.client-id=YOUR_APPLE_CLIENT_ID
+spring.security.oauth2.client.registration.apple.client-secret=YOUR_APPLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.apple.scope=name,email
+spring.security.oauth2.client.registration.apple.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.apple.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.apple.client-name=Apple
+
+spring.security.oauth2.client.provider.apple.authorization-uri=https://appleid.apple.com/auth/authorize
+spring.security.oauth2.client.provider.apple.token-uri=https://appleid.apple.com/auth/token
+spring.security.oauth2.client.provider.apple.user-info-uri=https://appleid.apple.com/auth/userinfo
+spring.security.oauth2.client.provider.apple.jwk-set-uri=https://appleid.apple.com/auth/keys
+spring.security.oauth2.client.provider.apple.user-name-attribute=sub
