Add UI enhancement for eliminated letters and cloud deployment automation
- Letters by Position table now shows all 26 letters with greyed-out eliminated ones
- Eliminated letters displayed with strike-through, reduced opacity, and grey color
- Individual positions with count=0 shown with strike-through and 30% opacity
- Fully eliminated letters (all positions=0) show letter name with 40% opacity

Added cloud deployment automation:
- Maven profiles for Java 17 (cloud) and Java 21 (local)
- PowerShell deployment scripts with secure config management
- Dictionary extraction from JAR for server deployment
- Deployment documentation and best practices
- Production application properties for cloud environment

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,20 @@ out/
 .project
 .classpath
 
+# Deployment secrets (DO NOT COMMIT)
+deployment/deployment-config.ps1
+*.key
+*.pem
+*.ppk
+
+# SSH keys
+.ssh/
+
+# Environment files
+.env
+.env.local
+.env.production
+
 # Eclipse
 *.pydevproject
 .metadata
