--- a/deployment/wordai.service
+++ b/deployment/wordai.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=opc
 WorkingDirectory=/home/opc/wordai-app
-ExecStart=/usr/bin/java -Xmx768m -Dspring.profiles.active=prod -jar /home/opc/wordai-app/wordai-1.0-SNAPSHOT.jar
+ExecStart=/usr/bin/java -Xmx4096m -Dspring.profiles.active=prod -jar /home/opc/wordai-app/wordai-1.1.jar
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=wordai
