--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,6 +63,8 @@ analysis.max.games.default=100
 game.word.length=5
 game.max.attempts=6
 game.simulation.iterations=1
+game.min.word.length=4
+game.max.word.length=7
 
 # Logging configuration
 logging.level=INFO
