Update UI/mobile behavior and cloud deployment config

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 # WordAI Production Configuration for Oracle Cloud
 server.port=8080
+server.forward-headers-strategy=framework
 
 # Dictionary Configuration - Use classpath resources
 dictionary.base.path=classpath:dictionaries
