--- a/deployment/application-prod.properties
+++ b/deployment/application-prod.properties
@@ -1,5 +1,6 @@
 # WordAI Production Configuration for Oracle Cloud
 server.port=8080
+server.forward-headers-strategy=framework
 
 # H2 Database - File-based for persistence
 spring.datasource.url=jdbc:h2:file:/home/opc/wordai-data/wordai
