Add algorithm feature toggles and Bellman selection strategies
Implemented configuration-based algorithm feature toggles to enable/disable
resource-intensive selection algorithms on lightweight hardware:

Backend Changes:
- Added AlgorithmFeatureService with @Value injection from application.properties
- Added 7 algorithm feature flags (random, entropy, most-common-letters,
  minimise-column-lengths, dictionary-reduction, bellman-optimal,
  bellman-full-dictionary)
- Added @PostConstruct logging to show enabled/disabled algorithms on startup
- Modified WordGameController to validate algorithm availability (HTTP 403 if disabled)
- Added /api/wordai/algorithms to SecurityConfig public endpoints
- Modified /algorithms endpoint to include 'enabled' field in response

Frontend Changes:
- Added loadAlgorithms() function to fetch and filter algorithms dynamically
- Modified all strategy selectors to populate from API (removes disabled options)
- Updated cache-busting version in index.html (?v=20260118153700)
- Added disabled-option CSS styles (greyed out, italic)

New Algorithms:
- Implemented SelectBellmanOptimal (minimizes expected remaining dictionary size)
- Implemented SelectBellmanFullDictionary (uses full dict guesses, tracks state)
- Added algorithm instance caching in GameSession to prevent duplicate guesses
- Added tests for both new algorithms

Bug Fixes:
- Fixed duplicate word selection in SelectBellmanFullDictionary
- Changed WordGame logging from .info() to .fine() to reduce console noise
- Fixed Jakarta annotation import (javax.annotation -> jakarta.annotation)

Configuration:
- Disabled 4 underperforming algorithms by default (most-common-letters,
  minimise-column-lengths, dictionary-reduction, bellman-optimal)
- Kept 3 algorithms enabled (random, entropy, bellman-full-dictionary)

All tests passing (36/36)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -116,3 +116,14 @@ spring.security.oauth2.client.provider.apple.token-uri=https://appleid.apple.com
 spring.security.oauth2.client.provider.apple.user-info-uri=https://appleid.apple.com/auth/userinfo
 spring.security.oauth2.client.provider.apple.jwk-set-uri=https://appleid.apple.com/auth/keys
 spring.security.oauth2.client.provider.apple.user-name-attribute=sub
+
+# Algorithm Feature Toggles
+# Enable/disable specific selection algorithms for performance tuning
+# Set to false to disable resource-intensive algorithms on lightweight hardware
+algorithm.features.random.enabled=true
+algorithm.features.entropy.enabled=true
+algorithm.features.most-common-letters.enabled=false
+algorithm.features.minimise-column-lengths.enabled=false
+algorithm.features.dictionary-reduction.enabled=false
+algorithm.features.bellman-optimal.enabled=false
+algorithm.features.bellman-full-dictionary.enabled=true
