--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,9 +91,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-# Security Configuration
-spring.security.user.name=admin
-spring.security.user.password=admin
+# Security Configuration - Admin user seeding
+wordai.admin.email=admin@wordai.local
+wordai.admin.username=admin
+wordai.admin.password=ChangeMe123!
+wordai.admin.fullName=System Administrator
 
 # OAuth2 Configuration - Google
 # Get credentials from: https://console.cloud.google.com/apis/credentials
