Remove difficulty labels from dictionary dropdown (4/5/6 Letters only)

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,20 +9,20 @@ dictionary.full.path=${dictionary.base.path}/${dictionary.file.name}
 dictionary.fallback.paths=dictionaries/5_letter_words.txt
 
 # Dictionary Options - All from classpath
-dictionaries.default.name=Standard (5 Letters)
+dictionaries.default.name=5 Letters
 dictionaries.default.path=dictionaries/5_letter_words.txt
 dictionaries.default.wordLength=5
-dictionaries.default.description=Standard 5-letter word dictionary
+dictionaries.default.description=5-letter word dictionary
 
-dictionaries.easy.name=Easy (4 Letters)
+dictionaries.easy.name=4 Letters
 dictionaries.easy.path=dictionaries/4_letter_words.txt
 dictionaries.easy.wordLength=4
-dictionaries.easy.description=Easier 4-letter words
+dictionaries.easy.description=4-letter word dictionary
 
-dictionaries.hard.name=Hard (6 Letters)
+dictionaries.hard.name=6 Letters
 dictionaries.hard.path=dictionaries/6_letter_words.txt
 dictionaries.hard.wordLength=6
-dictionaries.hard.description=Challenging 6-letter words
+dictionaries.hard.description=6-letter word dictionary
 
 # H2 Database - File-based for persistence
 spring.datasource.url=jdbc:h2:file:/home/opc/wordai-data/wordai
