--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,23 +23,23 @@ dictionary.fallback.paths=dictionaries/5_letter_words.txt,src/main/resources/dic
 #         dictionaries.<id>.wordLength=<Word Length>
 #         dictionaries.<id>.description=<Description>
 
-dictionaries.default.name=Standard (5 Letters)
+dictionaries.default.name=5 Letters
 dictionaries.default.path=dictionaries/5_letter_words.txt
 dictionaries.default.fallbackPath=${dictionary.base.path}/5_Letter_Words_Official.txt
 dictionaries.default.wordLength=5
-dictionaries.default.description=Standard 5-letter word dictionary
+dictionaries.default.description=5-letter word dictionary
 
-dictionaries.easy.name=Easy (4 Letters)
+dictionaries.easy.name=4 Letters
 dictionaries.easy.path=dictionaries/4_letter_words.txt
 dictionaries.easy.fallbackPath=${dictionary.base.path}/4_Letter_Words.txt
 dictionaries.easy.wordLength=4
-dictionaries.easy.description=Easier 4-letter words
+dictionaries.easy.description=4-letter word dictionary
 
-dictionaries.hard.name=Hard (6 Letters)
+dictionaries.hard.name=6 Letters
 dictionaries.hard.path=dictionaries/6_letter_words.txt
 dictionaries.hard.fallbackPath=${dictionary.base.path}/6_Letter_Words.txt
 dictionaries.hard.wordLength=6
-dictionaries.hard.description=Challenging 6-letter words
+dictionaries.hard.description=6-letter word dictionary
 
 # Output file configuration
 output.base.path=${dictionary.base.path}
